src/scss/components/_bibliography-section.scss
@use "../abstracts/functions/asset-url";
@use "../abstracts/variables";

.section-bibliography {
	text-align: center;

	&.loading {
		.spinner-container {
			display: flex;
			justify-content: center;
			margin-top: variables.$space-lg + 13px;
		}

		& ~ .section {
			visibility: hidden;
		}
	}

	.empty-bibliography {
		width: 160px;
		height: auto;
		margin-bottom: variables.$space-xl - 16px;

		@media (min-width: variables.$bp-md) {
			width: auto;
			margin-bottom: variables.$space-xxl - 18px;
		}
	}

	.empty-title {
		margin-bottom: variables.$lead-font-size-mobile * 0.5;

		@media (min-width: variables.$bp-md) {
			margin-bottom: variables.$lead-font-size * 0.5;
		}
	}

	.empty-lead {
		margin-bottom: -8px;

		@media (min-width: variables.$bp-md) {
			margin-bottom: -10px;
		}
	}

	.write & {
		&:not(.empty) {
			padding-top: variables.$section-padding-mobile - 17px;

			@media (min-width: variables.$bp-md) {
				padding-top: variables.$section-padding - 22px;
			}
		}

		.bibliography-title {
			display: flex;
			align-items: center;
			transition: background-color variables.$input-transition;
			border-radius: variables.$border-radius-sm;
			margin-bottom: variables.$space-xl - 12px;

			@media (min-width: variables.$bp-md) {
				margin-bottom: variables.$space-xxl - 18px;

				&:hover {
					background-color: variables.$shade-1;
					transition: background-color 0.15s 0.15s ease;
				}
			}

			.input-group {
				flex: 1 1 auto;
			}

			.editable {
				@media (min-width: variables.$bp-md) {
					justify-content: center;
				}
			}

			.editable-content {
				line-height: variables.$headings-line-height;
				padding: 8px 0;
				text-align: left;
				overflow-wrap: break-word;

				@media (min-width: variables.$bp-md) {
					text-align: inherit;
				}
			}

			.editable-control {
				border-width: 1px;
				box-shadow: 0 0 0 2px variables.$secondary;
				line-height: normal; // Heading line-height would clip decenders
				padding: 8px 0;
				text-align: left;
				margin: -5.5px;

				@media (min-width: variables.$bp-md) {
					text-align: inherit;
				}
			}

			.btn-icon {
				flex: 0 0 auto;
				margin-left: variables.$space-sm;

				@media (min-width: variables.$bp-md) {
					display: none;
				}
			}

			.editing + .btn-icon {
				display: none;
			}
		}
	}

	.style-selector {
		text-align: left;

		.select-component {
			.select-control {
				border-color: transparent;
				background: variables.$style-selector-bg;
				color: variables.$style-selector-color;
				padding: variables.$input-padding-y-lg variables.$input-padding-x-lg;
				border-radius: variables.$input-border-radius-lg;
				cursor: pointer;
				transition:
					background-color variables.$input-transition,
					border variables.$input-transition,
					box-shadow variables.$input-transition;

				&:hover {
					background: variables.$style-selector-hover-bg;
				}
			}

			&.is-focused {
				.select-control {
					box-shadow: 0 0 0 2px variables.$secondary;
					outline: none;

					&:hover {
						box-shadow: 0 0 0 2px variables.$style-selector-hover-bg;
					}
				}
			}

			&.single {
				.select-value-label {
					overflow: inherit;
					text-overflow: inherit;
					white-space: inherit;
				}
			}

			.select-value {
				position: static;
				padding: 0;
			}

			.select-input {
				position: absolute;
			}

			.select-arrow-container {
				margin-right: 0;
			}

			.select-arrow {
				background: asset-url.image-url("bg-icons/16/chevron-11-down-light.svg");
			}

			.select-menu-outer {
				padding: variables.$space-xs 0;
				left: 0;
				right: 0;
			}

			.select-option:not(.select-divider) {
				padding: variables.$space-min variables.$input-btn-padding-x-lg;

				&:last-child {
					color: variables.$link-color;
				}
			}
		}
	}

	.btn-edit-bibliography {
		@media print {
			display: none;
		}
	}

	.read-only & {
		border-top: none;
		padding-top: variables.$section-padding-mobile - 10px; // t height

		@media (min-width: variables.$bp-md) {
			padding-top: variables.$section-padding - 12px; // t height
		}

		.h2 {
			margin-bottom: variables.$space-xl - 17px;

			@media (min-width: variables.$bp-md) {
				margin-bottom: (variables.$space-xxl - 19px);
			}
		}
	}

	.export-tools {
		margin-top: 3em;
	}

	.delete-all,
	.btn-edit-bibliography {
		margin-top: 2em;
	}
}

